# Testing

./: .gitignore  pyproject.toml  registry.py  validation.py
Client/: client.py
Server/: server.py
Tests/: conftest.py  test_broadcast.py  test_conexion_varios.py  test_desconexion_durante_broadcast.py  test_escribir_cliente.py  test_recibir.py  test_sacar_cliente.py  test_validation.py
